RESOLVED FIXED135643
[EFL] Fix several warnings of doxygen
https://bugs.webkit.org/show_bug.cgi?id=135643
Summary [EFL] Fix several warnings of doxygen
Ryuan Choi
Reported 2014-08-06 02:56:29 PDT
SSIA
Attachments
Patch (10.12 KB, patch)
2014-08-06 03:04 PDT, Ryuan Choi
no flags
Patch (12.40 KB, patch)
2014-08-06 19:18 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2014-08-06 03:04:59 PDT
Grzegorz Czajkowski
Comment 2 2014-08-06 06:21:14 PDT
Comment on attachment 236086 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=236086&action=review Looks nice! > Source/WebKit2/UIProcess/API/efl/ewk_cookie_manager.h:106 > + * @param manager The cookie manager to update. Nit: The -> the since it does not start a new sentence.
Ryuan Choi
Comment 3 2014-08-06 19:18:15 PDT
Ryuan Choi
Comment 4 2014-08-06 19:23:35 PDT
(In reply to comment #2) > (From update of attachment 236086 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=236086&action=review > > Looks nice! > > > Source/WebKit2/UIProcess/API/efl/ewk_cookie_manager.h:106 > > + * @param manager The cookie manager to update. > > Nit: The -> the since it does not start a new sentence. Fixed.
Grzegorz Czajkowski
Comment 5 2014-08-07 00:27:40 PDT
Thanks for fixing it. LGTM.
Gyuyoung Kim
Comment 6 2014-08-07 05:01:00 PDT
Comment on attachment 236165 [details] Patch LGTM too.
WebKit Commit Bot
Comment 7 2014-08-07 15:12:12 PDT
Comment on attachment 236165 [details] Patch Clearing flags on attachment: 236165 Committed r172284: <http://trac.webkit.org/changeset/172284>
WebKit Commit Bot
Comment 8 2014-08-07 15:12:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.