Source/WebKit2/UIProcess/API/efl/ewk_form_submission_request.h
@@ -52,7 +52,7 @@ typedef struct EwkObject Ewk_Form_Submission_Request;
  *
  * @param request the request object to query.
  *
- * @return a #Eina_List with the form text fields names, or @c NULL in case of error.
+ * @return a Eina_List with the form text fields names, or @c NULL in case of error.
  * The items of the list are guaranteed to be stringshared so use eina_stringshare_add()
  * instead of strdup() to copy them and free them using eina_stringshare_del().
  *
@@ -66,7 +66,7 @@ EAPI Eina_List *ewk_form_submission_request_field_names_get(Ewk_Form_Submission_
  * @param request the request object to query.
  * @param name name of the field to query the value for.
  *
- * @return a #Eina_List with the form text fields names, or @c NULL in case of error.
+ * @return a Eina_List with the form text fields names, or @c NULL in case of error.
  * The string returned is guaranteed to be stringshared. You need to call
  * eina_stringshare_del() on the returned value once you are done with it.
  *
